--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,19 +16,26 @@
         android:text="ROUND"
         android:textColor="#000000"
         android:textSize="26dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/score_board"
         android:layout_width="match_parent"
         android:layout_height="29dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/round_text"
         android:background="#FFFFFF"
         android:gravity="center"
         android:text="0"
         android:textColor="#000000"
-        android:textSize="26dp"
-        android:layout_below="@+id/round_text"
-        android:layout_alignParentStart="true"/>
+        android:textSize="26dp" />
+
+    <View
+        android:id="@+id/middle_spacer"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_centerInParent="true"
+        android:background="#FFFFFF" />
 
     <Button
         android:id="@+id/greenBt"
@@ -45,29 +52,23 @@
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:layout_above="@id/middle_spacer"
-        android:layout_toRightOf="@id/greenBt"
         android:layout_margin="7dp"
+        android:layout_toRightOf="@id/greenBt"
         android:background="@drawable/round_corners"
         android:backgroundTint="@color/red"
         android:onClick="buttonClicked" />
 
-    <View
-        android:id="@+id/middle_spacer"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_centerInParent="true"
-        android:background="#FFFFFF"></View>
 
     <Button
         android:id="@+id/startBt"
-        android:onClick="buttonClicked"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:background="@drawable/round_start"
-        android:textStyle="bold"
+        android:onClick="buttonClicked"
+        android:text="START"
         android:textSize="20dp"
-        android:text="START" />
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/yellowBt"
@@ -75,19 +76,19 @@
         android:layout_height="180dp"
         android:layout_below="@id/middle_spacer"
         android:layout_margin="7dp"
-        android:backgroundTint="@color/yellow"
         android:background="@drawable/round_corners"
+        android:backgroundTint="@color/yellow"
         android:onClick="buttonClicked" />
 
     <Button
         android:id="@+id/blueBt"
         android:layout_width="180dp"
         android:layout_height="180dp"
-        android:layout_margin="7dp"
         android:layout_below="@id/middle_spacer"
+        android:layout_margin="7dp"
         android:layout_toRightOf="@id/yellowBt"
-        android:backgroundTint="@color/blue"
         android:background="@drawable/round_corners"
+        android:backgroundTint="@color/blue"
         android:onClick="buttonClicked" />
 
 
@@ -95,15 +96,15 @@
         android:id="@+id/instruction_timer"
         android:layout_width="match_parent"
         android:layout_height="21dp"
-        android:background="#FFFFFF"
         android:layout_alignParentBottom="true"
+        android:background="#FFFFFF"
+        android:backgroundTint="#C70039"
         android:drawableRight="@drawable/c4q_logo_crop_small"
         android:gravity="right"
-        android:backgroundTint="#C70039"
-        android:textStyle="bold"
+        android:text="Made with love @ "
         android:textColor="#FFFFFF"
         android:textSize="17dp"
-        android:text="Made with love @ "/>
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
