--- a/app/src/main/res/drawable/r_start2.xml
+++ b/app/src/main/res/drawable/r_start2.xml
@@ -2,11 +2,11 @@
     android:shape="oval"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <stroke android:color="#C70039"
+    <stroke android:color="#fbff7ec5"
         android:width="6dp">
     </stroke>
 
-    <solid android:color="#FF5733">
+    <solid android:color="#fa3bc7">
     </solid>
 
     <size android:width="110dp"
